force-app/main/default/objects/ssot__BenefitAssignment__dlm/fields/ssot__BenefitAssignmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitAssignmentStatus__c</fullName>
    <label>Benefit Assignment Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitAssignmentStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>