force-app/main/default/objects/ssot__BenefitAssignment__dlm/fields/ssot__CarePlanId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CarePlanId__c</fullName>
    <label>Care Plan</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CarePlanId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>