force-app/main/default/objects/ssot__BenefitAssignment__dlm/fields/ssot__EntitlementAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__EntitlementAmount__c</fullName>
    <label>Entitlement Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EntitlementAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>