force-app/main/default/objects/ssot__BenefitAssignment__dlm/fields/ssot__LoyaltyBenefitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyBenefitId__c</fullName>
    <label>Loyalty Benefit</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyBenefitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>