force-app/main/default/objects/ssot__BenefitAssignment__dlm/fields/ssot__RecertificationDueDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecertificationDueDate__c</fullName>
    <label>Recertification Due Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecertificationDueDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>