force-app/main/default/objects/ssot__BenefitAssignment__dlm/fields/ssot__rel_1716726574013_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726574013_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitAssignment_CarePlanId_map_Car_rel</label>
    <referenceTo>ssot__CarePlan__dlm</referenceTo>
    <relationshipLabel>BenefitAssignment_CarePlanId_map_Car_rel</relationshipLabel>
    <relationshipName>rel_1716726574013_end</relationshipName>
    <type>Lookup</type>
</CustomField>