force-app/main/default/objects/ssot__BenefitAssignment__dlm/fields/ssot__rel_1720291158435_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291158435_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitAssignment_ProviderId_map_Ind_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>BenefitAssignment_ProviderId_map_Ind_rel</relationshipLabel>
    <relationshipName>rel_1720291158435_end</relationshipName>
    <type>Lookup</type>
</CustomField>