force-app/main/default/objects/ssot__BenefitAssignment__dlm/fields/ssot__UnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__UnitOfMeasureId__c</fullName>
    <label>Unit Of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UnitOfMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>